# game-programming

./: .gitignore  LICENSE  purpose.txt
game-1/: CMakeLists.txt  Makefile  compile_commands.json  readme.md
game-1/src/: index.cpp  window.cpp  window.h
game-2/: CMakeLists.txt  Makefile  compile_commands.json  game  notes.md  output.txt
game-2/src/: common.h  index.cpp  player.cpp  player.h
game-3/: CMakeLists.txt  Makefile  compile_commands.json  game  output.txt  readme.md
game-3/src/: index.cpp  player.cpp  player.h
game-4/: CMakeLists.txt  Makefile  compile_commands.json  game  readme.md
game-4/src/: .index.cpp.swp  index.cpp
game-4/src/entities/: .player.h.swp  .world.h.swp  CMakeLists.txt  Makefile  entities.h  physics-entity.h  platform.cpp  platform.h  player.cpp  player.h  world-entity.h  world.cpp  world.h
